--- a/text_speech/index.html
+++ b/text_speech/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-
-    <title>Text to Speech</title>
-</head>
-<body>
-    <main class="main">
-        <h1 class="title ">Text To Speech </h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Convert text to Speech</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <main>
+        <p class="title">Text to Speech</p>
         <div class="text-section">
-            <p class="text-title ">Enter Text </p>
-            <textarea name="" id="text"> </textarea>
+            <p class="text-title">Enter Text</p>
+            <textarea name="" id="text" cols="30" rows="10"></textarea>
         </div>
         <div class="voice-section">
             <p class="voice-title">Select Voice</p>
-            <select name="" id="voice ">
-                 <option value="Google US English">Google US English<option>
+            <select name="" id="voice">
+                <option value="Google US English">Google US English</option>
             </select>
         </div>
-        <button class="submit">Convert To Speech </button>
-    </main>
-    
-</body>
-</html>
+        <button class="submit">Convert to Speech</button>
+      </main>  
+
+      <footer>
+        <a href="https://www.linkedin.com/in/marcotorquato/" target="_blank">Marco Torquato</a>
+      </footer>
+      <script src="script.js"></script>
+    </body>
+    </html>
