--- a/Pomodoro timer/index.html
+++ b/Pomodoro timer/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Google AdSense tag -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1643605892551839"
+     crossorigin="anonymous"></script>
     
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -77,7 +79,12 @@
         
       </div>
     </div>
+
         <script src="app.js"></script>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZP89Z491V"></script>
+
   </body>
 
 </html>
