--- a/pomo timer web/index.html
+++ b/pomo timer web/index.html
@@ -7,9 +7,20 @@
 
 <head>
   <meta charset="utf-8">
+
+  <!-- Google AdSense tag -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1643605892551839"
+  crossorigin="anonymous"></script>
+ 
+ <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
+ <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+
   <link href="style.css" rel="stylesheet">
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous">
+    
   <title>Pomodoro Timer</title>
 </head>
 
@@ -62,7 +73,10 @@
   <footer>
     <p>By <a href="https://www.marcotorquato.com" target="_blank">Marco Torquato</a></p>
   </footer>
+
   <script src="app.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZP89Z491V"></script>
 
 </body>
 
