--- a/Pomodoro timer 2/index.html
+++ b/Pomodoro timer 2/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google AdSense tag -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1643605892551839"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1643605892551839"
+    crossorigin="anonymous"></script>
     
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -39,6 +42,8 @@
 
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZP89Z491V"></script>
+
+            
 </body>
 
 </html>
