--- a/Pomodoro timer/index.html
+++ b/Pomodoro timer/index.html
@@ -85,6 +85,11 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZP89Z491V"></script>
 
+        <!-- Google AdSense -->
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1643605892551839"
+     crossorigin="anonymous"></script>
+
   </body>
 
 </html>
