uo to pomodorotimer

--- a/Pomodoro timer/index.html
+++ b/Pomodoro timer/index.html
@@ -33,14 +33,14 @@
           </div>
     
           <div class="timer-option">
-            <div>Break Length (Short)</div>
+            <div>Short Break</div>
             <button class="length-setter">-</button>
             <input type="text" name="short-break-length" value="5">
             <button class="length-setter">+</button>
           </div>
     
           <div class="timer-option">
-            <div>Break Length (Long)</div>
+            <div>Long Break</div>
             <button class="length-setter">-</button>
             <input type="text" name="long-break-length" value="15">
             <button class="length-setter">+</button>
